# rust_container_runner

./: .gitignore  Cargo.toml  docker-compose-neon.yml  docker-compose-neon2.yml  docker-compose.yml  dockerfile  run.sh  run2.sh
docker_assets/: .gitignore  ETHGenesis.json  bor_genesis.json  jwtsecret  lighthouse.env  neon_proxy.sh  neon_scheme.sql  run_and_init_db.sh  run_eth_rpc.sh  run_internal.sh  run_internal2.sh  run_tcp.sh  solana-run-neon.sh
docker_assets/aurora_config/: localnet.yaml
docker_assets/contracts/: gravity.sol
docker_assets/solidity/src/: gravity.sol
groups/: neon.ron
src/: main.rs
src/lib/: groups.rs
